--- a/pallets/migration/Cargo.toml
+++ b/pallets/migration/Cargo.toml
@@ -25,6 +25,7 @@ frame-system = { version = "4.0.0-dev", default-features = false, git = "https:/
 sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.37" }
 sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.37" }
 sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.37" }
+sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.37" }
 
 [features]
 default = ["std"]
@@ -37,6 +38,7 @@ std = [
 	"sp-core/std",
 	"pallet-balances/std",
 	"pallet-assets/std",
+	"sp-std/std",
 ]
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
 try-runtime = ["frame-support/try-runtime"]
